--- a/package.json
+++ b/package.json
@@ -14,7 +14,18 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@chakra-ui/gatsby-plugin": "^3.0.1",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fontsource/dm-sans": "^4.5.7",
+    "@fontsource/eb-garamond": "^4.5.8",
+    "framer-motion": "^6.3.15",
     "gatsby": "^4.17.1",
+    "gatsby-plugin-image": "^2.17.0",
+    "gatsby-plugin-sharp": "^4.17.0",
+    "gatsby-source-filesystem": "^4.17.0",
+    "gatsby-transformer-sharp": "^4.17.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   }
